--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,8 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/Titulo"
+        app:layout_constraintStart_toStartOf="@+id/Titulo"
         app:layout_constraintTop_toBottomOf="@+id/Titulo"
         app:layout_constraintVertical_bias="0.176" />
 
@@ -43,10 +43,13 @@
         android:id="@+id/imageView2"
         android:layout_width="180dp"
         android:layout_height="137dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@mipmap/logore"
-        tools:layout_editor_absoluteY="371dp" />
+        android:contentDescription="@string/Logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.31"
+        app:srcCompat="@mipmap/logore" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
