Lateral menu done. Is possible navigate between levels

--- a/app/src/main/res/layout/cabecera.xml
+++ b/app/src/main/res/layout/cabecera.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:orientation="vertical"
-    android:background="#fcdcd4"
+    android:background="#26283A"
     android:gravity="bottom"
+    android:orientation="vertical"
     android:padding="20dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@mipmap/logore"/>
+        android:src="@mipmap/logore" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/baloo"
         android:text="RefereeMatch"
-        android:textColor="#1D1F2B"
+        android:textColor="#FFFFFF"
         android:textSize="24sp" />
 
     <TextView
@@ -26,6 +25,6 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/aclonica"
         android:text="www.raulsantiago.tech"
-        android:textColor="#1D1F2B"
+        android:textColor="#FFFFFF"
         android:textSize="14dp" />
 </LinearLayout>
