--- a/app/src/main/res/layout/activity_modointermedio.xml
+++ b/app/src/main/res/layout/activity_modointermedio.xml
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="336dp"
                 android:layout_marginEnd="159dp"
-                android:text="Modo Facil"
+                android:text="Modo intermedio"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
